Updated note detail

--- a/src/app/notes/note-detail/note-detail.component.html
+++ b/src/app/notes/note-detail/note-detail.component.html
@@ -3,9 +3,9 @@
   <span class="button is-small is-info" (click)='addHeartToNote(note.hearts)'>
     Like <i class="fa fa-thumbs-up"></i>
   </span>
-  <span class="button is-small is-info" (click)='addDisToNote(note.hearts)'>
+  <!--<span class="button is-small is-info" (click)='addDisToNote(note.hearts)'>
     Dislike <i class="fa fa-thumbs-down"></i>
-  </span>
+  </span>-->
   <span class="button is-small is-info" style="background: green;" (click)='updateToNote(note.hearts)'>
     Update <i class="fa fa-pencil"></i>
   </span>
