Modified top nav bar

--- a/src/app/ui/top-nav/top-nav.component.html
+++ b/src/app/ui/top-nav/top-nav.component.html
@@ -22,11 +22,11 @@
     <a class="nav-item" routerLink="/notes">
       Timeline
     </a>
-    <a class="nav-item" routerLink="/items">
+    <a class="nav-item" routerLink="/profile">
       Profile
     </a>
-    <a class="nav-item" routerLink="/uploads">
+    <!--<a class="nav-item" routerLink="/uploads">
       File Uploads
-    </a>
+    </a>-->
   </div>
 </nav>
