--- a/src/app/notes/note-detail/note-detail.component.html
+++ b/src/app/notes/note-detail/note-detail.component.html
@@ -12,5 +12,5 @@
   <span class="button is-small is-danger" (click)='deleteNote(note?.id)'>
   	Delete <i class="fa fa-trash"></i>
   </span>  
-  <p>Like: {{ note.hearts || 0 }} &emsp; Dislike: {{ note.hearts || 0 }}</p>
+  <p>Like: {{ note.hearts || 0 }} </p>
 </div>
